--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="budget">Budget : </string>
     <string name="revenue">Revenue : </string>
     <string name="top_cast">Top Cast</string>
+    <string name="no_movies">No Movies Added In Favorite</string>
 </resources>
